# otus__fastapi_basic

./: .env.template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: main.py
src/common/: application.py  errors.py  exception_handlers.py  logger.py  settings.py
src/db/: connector.py  declarative.py
src/db/tables/: __init__.py  base.py  user.py
src/dto/schemas/: currency_prediction.py  exception.py  users.py
src/migrations/: env.py
src/migrations/versions/: ca43c6475076_.py
src/repositories/: users.py
src/routers/: base.py
src/routers/v1/: base_v1.py  content.py  currency_prediction.py  users.py
src/services/: currency_prediction.py  user.py
src/utils/: auth.py  enums.py  role_checker.py
